--- a/styles/main.css
+++ b/styles/main.css
@@ -16,9 +16,15 @@ header {
    
     
 }
+
+h1 {
+    text-align: center;
+    font-style: italic;
+}
 body {
     background-color: lightblue;
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
     
     
     
