--- a/styles/main.css
+++ b/styles/main.css
@@ -1,60 +1,45 @@
-@import "fish.css";
-@import "tips.css";
+@import "./fishlist.css";
 
-/* CSS starts here */
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
-header {
-    
-    height: 300px;
-   
+/*Typography
+--------------------------------------------------------------*/
+body,
+button,
+input,
+select,
+textarea {
+	color: #404040;
+	font-family: "Comfortaa", Arial, sans-serif;
+	font-size: 14px;
+	line-height: 1.5;
 }
 
-#oceanPic {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-   
-    
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Patua One", serif;
+  letter-spacing: 3px;
 }
 
 h1 {
-    text-align: center;
-    font-style: italic;
-}
-body {
-    background-color: lightblue;
-    margin: 0px;
-    font-family: 'Roboto', sans-serif;
-    
-    
-    
+	text-align: center;
 }
 
 img {
-    width: 100px;
+	width: 50px;
 }
 
-main {
-    display: flex;
-    justify-content: space-between;
-
+.contentContainer {
+	display: flex;
 }
 
-.travel {
-    background-color: lime;
+.contentContainer__left {
+	flex: 3;
 }
 
-.location {
-    background-color: mediumorchid;
+.contentContainer__right {
+	flex: 1;
 }
 
-.left {
-    flex: 3;
+body {
+	background-color: grey;
 }
-
-.right {
-    background-color: slateblue;
-    flex: 1;
-    
-}
-
